--- a/qr-code.css
+++ b/qr-code.css
@@ -42,7 +42,7 @@ h3 {
 .info-box {
     margin-left: 25px;
     margin-right: 20px;
-    margin-top: 15%;
+    margin-top: 0;
     min-height: 550px;
     text-align: left;
 }
