--- a/qr-code.css
+++ b/qr-code.css
@@ -1,3 +1,7 @@
+@media (max-height: 700px)
+.info-box {
+    margin-top: 0;
+}
 body {
     background-color: #ffffff;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
